--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -19,7 +19,8 @@
                         <div class="upload-file">
                             <img data-preview-media src="" alt="">
                             <label for="input-from-computer" data-param-value>Please select image Here</label>
-                            <input id="input-from-computer" type="file" accept="*/*" name="image" data-input-media="">
+                            <input id="input-from-computer" type="file" accept="image/*" name="image"
+                                   data-input-media="">
                             <button data-save-media-btn type="button">Submit</button>
                         </div>
                     </div>
