feat: install atomic css

--- a/core/assets/styles/index.scss
+++ b/core/assets/styles/index.scss
@@ -3,6 +3,7 @@
 // base
 @import "./utils/variables";
 @import "./base/base";
+@import "@viivue/atomic-css";
 
 // components
 @import './components/popup';
