perf: replace style with atomic css

--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -16,7 +16,7 @@ const getValueFromData = (name, property = '') => {
 %>
 
 <div class="posts-content">
-    <div class="posts-content__heading">
+    <div class="posts-content__heading fl-center-v" style="gap:10px;">
         <h1>Edit <%= title; %></h1>
         <a href="?post_type=post&action=add" class="button-style">Add New</a>
     </div>
