--- a/core/views/custom-type/posts/index.ejs
+++ b/core/views/custom-type/posts/index.ejs
@@ -1,5 +1,5 @@
 <div class="posts-content">
-    <div class="posts-content__heading">
+    <div class="posts-content__heading fl-center-v" style="gap:10px">
         <h1><%= title; %></h1>
         <a href="?post_type=post&action=add" class="button-style">Add New</a>
     </div>
