--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -1,33 +1,35 @@
 <div data-param="<%= paramName; %>" class="<%= classesName; %>">
-    <form method="post" action="?posts_type=media&method=post&action=add" enctype="multipart/form-data">
-        <div class="media-file">Media here</div>
-        <button data-toggle="media-panel" type="button" class="button-style" data-add-media-btn>+</button>
-    </form>
+
+    <!-- show media popup button -->
+    <div>Media here</div>
+    <button data-toggle="media-panel" class="button-style">+</button>
+
+    <!-- media popup -->
     <div data-pb-media-popup data-popup>
         <div data-popup-overflow>
             <div data-popup-overlay data-toggle="media-panel"></div>
-            <div data-popup-inner>
-                <form class="form-load-image-content" data-form method="post"
-                      action="?post_type=media&method=post&action=add"
-                      enctype="multipart/form-data">
-                    <div class="load-file-from-media">
-                        <button id="media-library" type="button">Media Library</button>
-                        <div data-media-list></div>
-                    </div>
-                    <div class="load-file-from-computer">
-                        <button type="button">Upload Files</button>
-                        <div class="upload-file">
-                            <img data-preview-media src="" alt="">
-                            <label for="input-from-computer" data-param-value>Please select image Here</label>
-                            <input id="input-from-computer" type="file" accept="image/*" name="image"
-                                   data-input-media="">
-                            <button data-save-media-btn type="button">Submit</button>
-                        </div>
-                    </div>
-                </form>
-                <button class="button-style">Set image</button>
-            </div>
-        </div>
 
+            <!-- popup content -->
+            <form data-popup-inner
+                  method="post" action="?post_type=media&method=post&action=add" enctype="multipart/form-data">
+
+                <!-- media list -->
+                <div class="load-file-from-media">
+                    <button id="media-library" type="button">Media Library</button>
+                    <div data-media-list></div>
+                </div>
+
+                <!-- upload new media -->
+                <div class="load-file-from-computer">
+                    <img data-preview-media src="" alt="">
+                    <label for="input-from-computer" data-param-value>Please select image Here</label>
+                    <input id="input-from-computer" type="file" accept="image/*" name="image"
+                           data-input-media>
+                    <button data-save-media-btn type="button">Submit</button>
+                </div>
+            </form>
+
+            <button class="button-style">Set image</button>
+        </div>
     </div>
 </div>
