--- a/core/assets/styles/components/media-popup.scss
+++ b/core/assets/styles/components/media-popup.scss
@@ -1,12 +1,44 @@
 /**
 * Media popup
 **/
+.media-popup {
+  &__col--left {
+    width: 60%;
+    padding-right: 20px;
+  }
+
+  &__col--right {
+    width: 40%;
+  }
+
+  @include responsive('tablet') {
+    &__col--left,
+    &__col--right {
+      width: 100%;
+    }
+
+    &__col--left {
+      margin-bottom: 25px;
+    }
+  }
+}
+
 [data-media-item] input[type="radio"],
-[data-media-item] input[type="checkbox"] {display: none;}
+[data-media-item] input[type="checkbox"] {
+  display: none;
+}
 
 // hover
-[data-media-list]:hover [data-media-item]  [data-media-image]:not(:hover) {opacity: 0.4;}
+[data-media-list]:hover [data-media-item] [data-media-image]:not(:hover) {
+  opacity: 0.4;
+}
+
 [data-media-list]:hover [data-media-item] input[type="radio"]:not(:checked) + [data-media-image]:hover,
 [data-media-item] input[type="radio"]:checked + [data-media-image],
-[data-media-item] input[type="checkbox"]:checked + [data-media-image] {border-color: red;}
-[data-media-list]:hover [data-media-item] input[type="radio"]:checked + [data-media-image]:not(:hover) {border-color: transparent;}
+[data-media-item] input[type="checkbox"]:checked + [data-media-image] {
+  border-color: red;
+}
+
+[data-media-list]:hover [data-media-item] input[type="radio"]:checked + [data-media-image]:not(:hover) {
+  border-color: transparent;
+}
