--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -2,7 +2,7 @@
 
     <!-- show media popup button -->
     <div>Media here</div>
-    <button data-toggle="media-panel" class="button-style">+</button>
+    <button data-load-media type="button" data-toggle="media-panel" class="button-style">+</button>
 
     <!-- media popup -->
     <div data-pb-media-popup data-popup>
