--- a/core/views/custom-type/media/index.ejs
+++ b/core/views/custom-type/media/index.ejs
@@ -41,7 +41,7 @@
                             <!-- name -->
                             <div class="fl-center-v" style="gap:4px;">
                                 <label for="name">Name: </label>
-                                <input id="name" class="w100" data-media-name>
+                                <input id="name" class="w100" data-media-name required placeholder="Name">
                             </div>
 
                             <!-- URL -->
