chore: media > Add required filed

--- a/core/views/custom-type/media/index.ejs
+++ b/core/views/custom-type/media/index.ejs
@@ -2,7 +2,7 @@
     <label for="name">Name: </label>
     <input id="name" type="text" name="name">
     <label for="image">Add Image: </label>
-    <input type="file" name="image" accept="image/*" id="image" data-input-test>
+    <input type="file" name="image" accept="image/*" id="image" required data-input-test>
     <button class="button-style" type="submit">Add New</button>
 </form>
 
