feat: add action to form

--- a/views/register/sign-in.ejs
+++ b/views/register/sign-in.ejs
@@ -1,5 +1,4 @@
-<form method="post" action="">
-
+<form method="post" action="?type=sign-in&method=post">
     <!-- email -->
     <div>
         <label for="email">Email:</label>
