--- a/views/register/forget-password.ejs
+++ b/views/register/forget-password.ejs
@@ -1,4 +1,4 @@
-<form method="post" action="">
+<form method="post" action="?type=<%= type; %>&method=post">
 
     <!-- password -->
     <div>
@@ -9,7 +9,7 @@
     <!-- Confirm password -->
     <div>
         <label for="confirm-password">Confirm:</label>
-        <input id="confirm-password" type="password" name="confirm-password" placeholder="Confirm">
+        <input id="confirm-password" type="password" name="confirmPassword" placeholder="Confirm">
     </div>
 
     <!-- Submit -->
