--- a/views/register/sign-up.ejs
+++ b/views/register/sign-up.ejs
@@ -1,4 +1,4 @@
-<form method="post" action="">
+<form method="post" action="?type=<%= type %>&method=post">
 
     <!-- username -->
     <div>
@@ -21,7 +21,7 @@
     <!-- Confirm password -->
     <div>
         <label for="confirm-password">Confirm:</label>
-        <input id="confirm-password" type="password" name="confirm-password" placeholder="Confirm">
+        <input id="confirm-password" type="password" name="confirmPassword" placeholder="Confirm">
     </div>
 
     <!-- Submit -->
