--- a/core/assets/styles/components/media-popup.scss
+++ b/core/assets/styles/components/media-popup.scss
@@ -23,22 +23,35 @@
   }
 }
 
-[data-media-item] input[type="radio"],
-[data-media-item] input[type="checkbox"] {
+// popup in page builder
+
+// layout
+[data-pb-media-popup] [data-media-list] {
+  --grid-col: 5;
+}
+
+// checkbox
+[data-media] input[type="radio"],
+[data-media] input[type="checkbox"] {
   display: none;
 }
 
+// item
+[data-media] [data-media-item] {
+  padding: 4px;
+}
+
 // hover
-[data-media-list]:hover [data-media-item] [data-media-image]:not(:hover) {
+[data-media-list]:hover [data-media] [data-media-item]:not(:hover) {
   opacity: 0.4;
 }
 
-[data-media-list]:hover [data-media-item] input[type="radio"]:not(:checked) + [data-media-image]:hover,
-[data-media-item] input[type="radio"]:checked + [data-media-image],
-[data-media-item] input[type="checkbox"]:checked + [data-media-image] {
-  border-color: red;
+[data-media-list]:hover [data-media] input[type="radio"]:not(:checked) + [data-media-item]:hover,
+[data-media] input[type="radio"]:checked + [data-media-item],
+[data-media] input[type="checkbox"]:checked + [data-media-item] {
+  border-color: var(--color-primary);
 }
 
-[data-media-list]:hover [data-media-item] input[type="radio"]:checked + [data-media-image]:not(:hover) {
+[data-media-list]:hover [data-media] input[type="radio"]:checked + [data-media-item]:not(:hover) {
   border-color: transparent;
 }
