--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -19,12 +19,12 @@
 
                 <!-- upload new media -->
                 <div class="media-popup__col--right">
-                    <form class="media-popup fl-grid" action="?post_type=media&method=post&action=add"
+                    <form data-media-form class="media-popup fl-grid" action="?post_type=media&method=post&action=add"
                           enctype="multipart/form-data">
 
                         <div>
                             <label for="name">Name:</label>
-                            <input type="text" id="name" placeholder="Name">
+                            <input type="text" id="name" placeholder="Name" data-media-name>
                         </div>
 
                         <div>
