--- a/core/views/core-component-type/text.ejs
+++ b/core/views/core-component-type/text.ejs
@@ -1,6 +1,9 @@
 <div data-param="<%= paramName; %>" class="<%= classesName; %>">
-    <div data-param-value contenteditable="">
-        Please edit the content here
+
+    <div>
+        <div id="toolbar"></div>
+        <div id="editor"></div>
     </div>
+
     <div class="description"> <%= description %></div>
 </div>
