feat: edit component functional

--- a/core/views/core-component-type/text.ejs
+++ b/core/views/core-component-type/text.ejs
@@ -1,8 +1,7 @@
 <div data-param="<%= paramName; %>" class="<%= classesName; %>">
 
-    <div>
-        <div id="toolbar"></div>
-        <div id="editor"></div>
+    <div data-param-value>
+        Vu pham Here
     </div>
 
     <div class="description"> <%= description %></div>
