refactor: refactoring views folder structure

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -23,12 +23,12 @@
 <body>
 
 <header class="header">
-    <%- include('header'); -%>
+    <%- include('partials/header'); -%>
 </header>
 
 <div class="site-content">
     <aside class="sidebar">
-        <%- include('category'); -%>
+        <%- include('partials/category'); -%>
     </aside>
     <div class="main-content">
         <div class="main-content__inner">
