feat(text-editor): introduce component

--- a/core/views/core-component-type/text.ejs
+++ b/core/views/core-component-type/text.ejs
@@ -1,8 +1,5 @@
 <div data-param="<%= paramName; %>" class="<%= classesName; %>">
 
-    <div data-param-value>
-        Vu pham Here
-    </div>
-
+    <div data-param-value id="editor-container"></div>
     <div class="description"> <%= description %></div>
 </div>
