--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -40,7 +40,7 @@ const getValueFromData = (name, property = '') => {
                     <% if (isEditPost) { %>
                         <div class="posts-detail__permalink">
                             <label for="permalink" style="margin-right:10px;">Permalink:</label>
-                            <input type="text" placeholder="permalink" id="permalink" name="url" required
+                            <input type="text" placeholder="permalink" id="permalink" name="url"
                                    value="<%= getValueFromData('url') %>">
                         </div>
                     <% } %>
