refactor: optimize send token

--- a/views/register/sign-up.ejs
+++ b/views/register/sign-up.ejs
@@ -1,4 +1,4 @@
-<form method="post" action="?type=<%= type %>&method=post">
+<form method="post" action="?type=<%= type %>&method=post&getJSON=true">
 
     <!-- username -->
     <div>
