feat: show username in header

--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -10,8 +10,11 @@
         </div>
     </div>
     <div class="admin__panel--right">
-        <div class="admin-panel__account">
-            <p>Halo, Vu</p>
+        <div class="admin-panel__account" style="display: flex; gap: 5px">
+            <p>Hello</p>
+            <div>
+                <a href="?account"> <%= user.name%></a>
+            </div>
         </div>
     </div>
 </div>
