--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Admin</title>
+    <title><%= title %> - <%= projectName %></title>
 
     <!--  For demo only  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
