style: move account menu to sidebar

--- a/core/assets/styles/components/sidebar.scss
+++ b/core/assets/styles/components/sidebar.scss
@@ -13,6 +13,13 @@
 .category__panel-inner {
   overflow: auto;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.account__menu {
+  margin-bottom: 30px;
 }
 
 /* item */
