--- a/views/admin/partials/category.ejs
+++ b/views/admin/partials/category.ejs
@@ -15,5 +15,16 @@ const isActiveItem = (category) => {
                 </li>
             <% }) %>
         </ul>
+
+        <!-- account menu -->
+        <ul class="account__menu">
+            <li class="category__menu-item">
+                <a class="category__menu-item--link" href="#">Account</a>
+            </li>
+
+            <li class="category__menu-item">
+                <a class="category__menu-item--link" href="register/log-out">Log out</a>
+            </li>
+        </ul>
     </div>
 </div>
