--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -11,21 +11,7 @@
     </div>
     <div class="admin__panel--right">
         <div class="admin-panel__account">
-            <p>Hello</p>
-            <div>
-                <button><%= user.name %></button>
-
-                <!-- Drop down account -->
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="?account">Account</a>
-                    </li>
-
-                    <li>
-                        <a href="/register?type=log-out">Log out</a>
-                    </li>
-                </ul>
-            </div>
+            <p>Hello <%= user.name %></p>
         </div>
     </div>
 </div>
