refactor: refactor url

--- a/views/admin/partials/category.ejs
+++ b/views/admin/partials/category.ejs
@@ -23,7 +23,7 @@ const isActiveItem = (category) => {
             </li>
 
             <li class="category__menu-item">
-                <a class="category__menu-item--link" href="register/log-out">Log out</a>
+                <a class="category__menu-item--link" href="/register?type=log-out">Log out</a>
             </li>
         </ul>
     </div>
