--- a/core/views/core-component-type/text.ejs
+++ b/core/views/core-component-type/text.ejs
@@ -1,4 +1,4 @@
-<div data-param="<%= paramName; %>" class="<%= classesName; %>">
+<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
 
     <div data-param-value id="editor-container"></div>
     <div class="description"> <%= description %></div>
