--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -1,4 +1,4 @@
-<div data-param="<%= paramName; %>" class="<%= classesName; %>">
+<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
 
     <!-- show media popup button -->
     <div>Media here</div>
