refactor: refactor structure register folder

--- a/views/register/type/sign-in.ejs
+++ b/views/register/type/sign-in.ejs
@@ -11,9 +11,15 @@
         <input id="password" type="password" name="password" placeholder="Password">
     </div>
 
-    <!-- Submit -->
+    <!-- Button -->
     <div>
-        <button type="submit">Sign In</button>
+        <div>
+            <button type="submit">Sign In</button>
+        </div>
+
+        <div>
+            <a href="/register?type=forget-password">Forget password</a>
+        </div>
     </div>
 
 </form>
