feat: init group component

--- a/core/views/core-component-type/text-field.ejs
+++ b/core/views/core-component-type/text-field.ejs
@@ -1,7 +1,7 @@
-<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
+<div data-type="<%= type; %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
     <div data-param-value>
         <label for="text-field"></label>
-        <input id="text-filed" name="text-field" placeholder="Type something..."/>
+        <input name="text-field" placeholder="Type something..."/>
     </div>
 
     <div class="description"> <%= description %></div>
