--- a/core/views/core-component-type/text-field.ejs
+++ b/core/views/core-component-type/text-field.ejs
@@ -1,4 +1,4 @@
-<div data-type="<%= type; %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
+<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
     <div data-param-value>
         <label for="text-field"></label>
         <input name="text-field" placeholder="Type something..."/>
