fix: error when post

--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -111,7 +111,7 @@ const getValueFromData = (name, property = '') => {
                 </div>
                 <div class="posts-detail__template">
                     <label for="template">Template</label>
-                    <select name="visibility" id="visibility">
+                    <select name="template" id="template">
                         <option <%= isSelectedValue('template', 'default') %> value="default" name="default">Default
                         </option>
                         <option <%= isSelectedValue('template', '1') %> value="1" name="1">1
