--- a/views/admin/partials/category.ejs
+++ b/views/admin/partials/category.ejs
@@ -8,18 +8,20 @@ const isActiveItem = (category) => {
 <div class="category__panel">
     <div class="category__panel-inner">
         <ul class="category__menu">
-            <% categories.forEach(category => { %>
-                <li class="category__menu-item">
-                    <a class="category__menu-item--link <%= isActiveItem(category) %>"
-                       href="<%= category.url %>"><%= category.name %></a>
-                </li>
+            <% categories.forEach(category => {
+                if(category.notShowInCategory) return; %>
+            <li class="category__menu-item">
+                <a class="category__menu-item--link <%= isActiveItem(category) %>"
+                   href="<%= category.url %>"><%= category.name %></a>
+            </li>
             <% }) %>
         </ul>
 
         <!-- account menu -->
         <ul class="account__menu">
             <li class="category__menu-item">
-                <a class="category__menu-item--link" href="#">Account</a>
+                <a class="category__menu-item--link <%= isActiveItem(categories.find(c => c.type === 'account')) %>"
+                   href="/<%= adminPath %>/account">Account</a>
             </li>
 
             <li class="category__menu-item">
