--- a/core/assets/styles/pages/posts-detail.scss
+++ b/core/assets/styles/pages/posts-detail.scss
@@ -33,7 +33,7 @@
   margin-bottom: 40px;
 }
 
-[data-pb] [data-component] {
+[data-pb-inner] [data-component] {
   text-align: left;
   font-size: 14px;
   position: relative;
@@ -62,7 +62,7 @@
 }
 
 /* row */
-[data-pb] [data-component="row"] {
+[data-pb-inner] [data-component="row"] {
   border: 1px solid var(--color-primary);
   padding: 20px;
   border-radius: 5px;
